query user with email and password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/PetParade
 spring.datasource.username=root
 spring.datasource.password=root
 
+# spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.open-in-view=true
+
 # This makes hibernate use capital letters for db stuff(tables, cols, etc...)
 # Without this, table names will be lowercase and thus incorrect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
