--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,20 @@
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url=jdbc:mariadb://localhost:3306/PetParade
+spring.datasource.url=jdbc:mariadb://localhost:3306/PetParade?serverTimezone=UTC&useLegacyDatetimeCode=false&autoReconnect=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 # spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.open-in-view=true
 
 # This makes hibernate use capital letters for db stuff(tables, cols, etc...)
 # Without this, table names will be lowercase and thus incorrect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# Tomcat configuration
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
