--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,9 @@ spring.jpa.open-in-view=true
 # Without this, table names will be lowercase and thus incorrect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+# Logging
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
 # Tomcat configuration
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
